<resources>
    <string name="app_name">Caculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_clear">Clear</string>
    <string name="item_save_last_result">Save Last Result</string>
    <string name="ac">AC</string>
    <string name="sign">+/-</string>
    <string name="x">Del</string>
    <string name="div">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multi">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sub">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="result">=</string>
    <string name="nothing"></string>
    <string name="multi_operator">*</string>
</resources>

