<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_result"
    tools:context=".CaculatorFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:stretchColumns="*">

        <TableRow
            android:layout_gravity="top"
            android:layout_weight="@string/three">

            <TextView
                android:id="@+id/editext_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="@string/four"
                android:background="@color/background_result"
                android:editable="false"
                android:gravity="center_vertical|right"
                android:maxLength="15"
                android:padding="@dimen/dp_16"
                android:paddingBottom="@dimen/dp_48"
                android:text="@string/zero"
                android:textSize="@dimen/sp_38"
                android:typeface="serif" />
        </TableRow>

        <TableRow android:layout_gravity="bottom">

            <Button
                android:id="@+id/button_ac"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/ac"
                android:textColor="@color/orange"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_sign"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/sign"
                android:textColor="@color/background_sate_action"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_delete"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/x"
                android:textAllCaps="false"
                android:textColor="@color/background_sate_action"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_div"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/div"
                android:textColor="@color/background_sate_action"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_seven"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/seven"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_eight"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/eight"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_nine"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/nine"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_multi"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/multi"
                android:textAllCaps="false"
                android:textColor="@color/background_sate_action"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_four"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/four"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_five"
                style="?attr/buttonStyle"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/five"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_six"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/six"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_sub"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/sub"
                android:textColor="@color/background_sate_action"
                android:textSize="@dimen/sp_32" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_one"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/one"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_two"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/two"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_three"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/three"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_add"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/add"
                android:textColor="@color/background_sate_action"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_zero"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/two"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/zero"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_dot"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected"
                android:padding="@dimen/dp_16"
                android:text="@string/dot"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_result"
                android:layout_margin="@dimen/px_1"
                android:layout_span="@string/one"
                android:background="@drawable/background_selected_action"
                android:padding="@dimen/dp_16"
                android:text="@string/result"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_32"
                android:typeface="serif" />
        </TableRow>
    </TableLayout>
</FrameLayout>
